# swarm-together

./: .gitignore  IMPLEMENTATION_SUMMARY.md  PULL_REQUEST.md  README.md  index.html  package-lock.json  package.json  plan.md  playwright.config.ts  scope.md  tailwind.config.ts  tauri.conf.json  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: BRAND_KIT.md
e2e/: block-operations.spec.ts  debug-panel.spec.ts  export-import.spec.ts  helpers.ts  pane-grid.spec.ts  scenarios-performance.spec.ts  smoke.spec.ts  theme-visual.spec.ts  token-tracking.spec.ts
src/: App.tsx
src-tauri/: Cargo.toml
src-tauri/migrations/: 002_session_schema.sql
src-tauri/src/: config.rs  db.rs  error.rs  keychain.rs  lib.rs  main.rs
src-tauri/src/api/: auth.rs  gateway.rs  mod.rs  rate_limit.rs  websocket.rs
src-tauri/src/commands/: connectors.rs  mod.rs  runtime.rs  session.rs
src-tauri/src/connectors/: README.md  claude_code.rs  codex_cli.rs  mod.rs  ollama.rs  types.rs
src-tauri/src/memory/: README.md  blackboard.rs  manager.rs  mod.rs  ring_buffer.rs  types.rs
src-tauri/src/runtime/: README.md  mailbox.rs  mod.rs  orchestrator.rs  registry.rs  types.rs
src-tauri/src/session/: mod.rs  service.rs  types.rs
src-tauri/tests/: claude_code_connector_test.rs  codex_cli_connector_test.rs  integration_tests.rs  memory_integration_test.rs  ollama_connector_test.rs  orchestrator_integration_test.rs  session_integration_test.rs
tasks/: 000-foundations-environment.md  010-test-harness-baseline.md  020-connector-claude-code-cli.md  021-connector-codex-cli-gpt5.md  (+15 more)
(+64 files in other folders)
