[package]
name = "agent-manager"
version = "0.0.1"
description = "Multi-agent coding system orchestrator"
authors = ["Agent Manager Team"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "agent_manager"
path = "src/lib.rs"

[[bin]]
name = "agent-manager"
path = "src/main.rs"
required-features = ["gui"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.8", features = [
  "api-all",
  "shell-open",
  "shell-execute",
  "fs-read-file",
  "fs-write-file",
  "fs-read-dir",
  "fs-create-dir"
], optional = true }
tokio = { version = "1.35", features = ["macros", "rt"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
keyring = "2.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }

[features]
default = ["gui"]
gui = ["tauri"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
complexity = "warn"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
wiremock = "0.5"
